# irida_x86

./: .gitignore  LICENSE  README.md  asm.sh  build.sh  dune-project  install.sh
.github/workflows/: main.yml
editors/: copy_syntax_vim.sh  irida.vim
examples/: alloc.iri  asdf.iri  asm_tests  asm_tests.asm  cool  cool.iri  count_to_ten.iri  dream.iri  factorial.iri  hello.iri  hola  hola.iri  if  if.asm  if.iri  inline.iri  loop.iri  pushInt.iri  x.iri
examples/euler/: 001.iri  002.iri
lib/: compile.ml  dune  lexer.mll  parser.mly  templates.ml  typecheck.ml  types.ml  utils.ml
lib/parser/: dune  lexer.mll  parser.mly
lib/preconditions/: macros.ml  procedures.ml
lib/type-checking/: typecheck.ml
lib/utils/: utils.ml
libraries/: hola  hola.asm  hola.iri  std.iri  test  test.asm  test.iri
test/: dune
