(include_subdirs unqualified)

(library
 (name irida)
 (preprocess (pps ppx_deriving.show
                  ppx_deriving.eq
                  ppx_deriving.ord ))
 (libraries unix)
 (modules types utils
          templates
          parser lexer
        ; Preconditions
          procedures macros
          typecheck compile))
